--- a/app/global.css
+++ b/app/global.css
@@ -1,15 +1,17 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
   min-height: 100vh;
+  min-width: 100vw;
   margin: 0;
-  background-color: #f5f5f5;
-  padding: 20px;
+  /* background-color: #f5f5f5; */
+  padding: 0px;
 }
 
+/* 
 label {
   font-weight: bold;
   display: block;
@@ -74,4 +76,4 @@ li {
   clip: rect(0, 0, 0, 0);
   white-space: nowrap;
   border-width: 0;
-}
+} */
