--- a/app/global.css
+++ b/app/global.css
@@ -1,79 +1,85 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
   min-height: 100vh;
   min-width: 100vw;
   margin: 0;
-  /* background-color: #f5f5f5; */
   padding: 0px;
-}
-
-/* 
-label {
-  font-weight: bold;
-  display: block;
-  margin-bottom: 5px;
-}
-
-input[type="text"] {
-  border: 1px solid #ccc;
-  padding: 10px;
-  font-size: 16px;
-  width: 100%;
-  box-sizing: border-box;
-  margin-bottom: 10px;
-  border-radius: 4px;
-  outline-offset: 4px;
-}
-
-button {
-  background-color: black;
-  border-radius: 4px;
-  color: white;
-  padding: 10px 24px;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  font-size: 16px;
-  outline-offset: 4px;
-}
-
-button:hover {
-  opacity: 0.8;
-}
-
-button[aria-disabled="true"] {
-  opacity: 0.5;
-  cursor: not-allowed;
-}
-
-ul {
-  padding: 0;
-  margin: auto;
-}
-
-li {
-  background: #f9f9f9;
-  padding: 10px;
-  margin-bottom: 10px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
+  overscroll-behavior: none;
   overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border-width: 0;
-} */
+}
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* Your base theme settings */
+@layer base {
+  html {
+    --color-todoPrimary: #add4ad;
+    --color-black: #64635f;
+    --color-todoSecondary: #c0cdc0;
+    --color-header: #add4ad;
+    --color-headerText: white;
+    --color-layout: white;
+    --color-content: null;
+    --color-primaryText: #ffffff;
+    --color-title: #8aa48a;
+  }
+}
+
+/* @import "theme.css"; */
+
+html[data-theme="theme1"] {
+  --color-todoPrimary: #add4ad;
+  --color-black: #64635f;
+  --color-todoSecondary: #c0cdc0;
+  --color-todoSecondary2: #c0cdc0;
+  --color-header: #add4ad;
+  --color-headerText: white;
+  --color-layout: white;
+  --color-content: null;
+  --color-primaryText: #ffffff;
+  --color-title: #8aa48a;
+
+
+}
+
+html[data-theme="theme2"] {
+  --color-todoPrimary: #d8e3fa;
+  --color-todoSecondary: #acb7ca;
+  --color-todoSecondary2: #acb7ca;
+  --color-black: #4e6c84;
+  --color-header: #889dc8;
+  --color-layout: #d5e4fc;
+  --color-headerText: #ffffff;
+  --color-content: #fbfdf7;
+  --color-primaryText: #4e5d7a;
+  --color-title: #4e5d7a;
+}
+
+html[data-theme="theme3"] {
+  --color-todoPrimary: #25272d;
+  --color-black: #000002;
+  --color-todoSecondary: rgb(163, 163, 163);
+  --color-todoSecondary2: rgb(163, 163, 163);
+  --color-header: #25272d;
+  --color-headerText: white;
+  --color-layout: #ffffff;
+  --color-content: #f4f4f4;
+  --color-primaryText: #ffffff;
+  --color-title: #000002;
+}
+
+html[data-theme="theme4"] {
+  --color-todoPrimary: #000000;
+  --color-black: #000002;
+  --color-todoSecondary: rgb(0, 0, 0, 0.3);
+  --color-todoSecondary2: rgba(0, 0, 0, 1);
+  --color-header: null;
+  --color-headerText: #000002;
+  --color-layout: rgba(0, 0, 0, 0.1);
+  --color-content: rgba(255, 255, 255, 0.1);
+  --color-primaryText: #ffffff;
+  --color-title: #000002;
+}
